<package format="2">
  <name>my_controller</name>
  <version>0.13.2</version>
  <description>my_controller</description>
  <maintainer email="zqy@zqy.com">Adolfo Rodriguez Tsouroukdissian</maintainer>

  <license>BSD</license>

  <!--url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url -->

  <author>zqy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend> 
  <depend>control_msgs</depend> 
  <depend>control_toolbox</depend> 
  <depend>realtime_tools</depend> 
  <depend>urdf</depend> 
  <!--depend>forward_command_controller</depend-->
  
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <controller_interface plugin="${prefix}/my_controller_plugins.xml"/>
  </export>
</package>
